# work_chat

./: .env.exemple  README.md  manage.py  pyproject.toml
chat/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_remove_groupchat_descripion_groupchat_description.py  0003_alter_groupchat_icon.py  0004_alter_groupchat_icon.py  0005_groupchat_creator.py  0006_message.py
chat/templates/: base_groups.html  group_chat.html  group_create.html  group_delete.html  group_detail.html  group_edit.html
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py
static/css/: auth.css  chat_and_groups.css  main.css  profile.css  redact_profile.css
static/js/: auth.js  main.js
staticfiles/css/: chat_and_groups.css  profile.css
staticfiles/js/: main.js
teamplates/: base.html
templates/: base.html  home.html  in_dev.html  test.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_delete_customuser.py  0003_initial.py  0004_profile_birth_year.py  0005_profile_name.py  0006_remove_profile_birth_year.py  0007_remove_profile_name.py
users/templates/: auth.html  login.html  profile_redact.html  profile_user.html  register.html  user_home.html
work_chat/: asgi.py  settings.py  urls.py  wsgi.py
