[project]
name = "TeamPulse"
version = "0.1.0"
description = "my first pet poject"
authors = [
    {name = "ManK0-is-here",email = "zarennyjracok@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
